--- a/index.html
+++ b/index.html
@@ -4,31 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youtube - Assistindo Vídeo</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <header class="top-menu">
         <div class="menu-left">
-            <img src="/assets/images/menu.png" alt="Burger Menu">
-            <img src="/assets/images/youtube 1.png" alt="Logo do YouTube" class="logo">
+            <img src="assets/images/menu.png" alt="Burger Menu">
+            <img src="assets/images/youtube 1.png" alt="Logo do YouTube" class="logo">
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Pesquisar...">
             <button>
-                <img src="/assets/images/search.png" alt="Ícone de busca">
+                <img src="assets/images/search.png" alt="Ícone de busca">
             </button>
         </div>
         <div class="menu-right">
-            <img src="/assets/images/video.png" alt="Ícone de vídeo">
-            <img src="/assets/images/bell.png" alt="Ícone de sino">
-            <img src="/assets/images/Avatar-DB.jpg" alt="Imagem de perfil" id="avatar">
+            <img src="assets/images/video.png" alt="Ícone de vídeo">
+            <img src="assets/images/bell.png" alt="Ícone de sino">
+            <img src="assets/images/Avatar-DB.jpg" alt="Imagem de perfil" id="avatar">
         </div>
     </header>
 
     <div class="container">
         <div class="video-container">
             <div class="video-player">
-                <img src="/assets/images/image 2.png" alt="Display Video">
+                <img src="assets/images/image 2.png" alt="Display Video">
             </div>
             <div class="video-info">
                 <h1 class="video-title">
@@ -37,7 +37,7 @@
 
                 <div class="submenu">
                     <div class="channel-info">
-                        <img src="/assets/images/Channel Avatar.png" alt="Avatar do Canal" class="avatar">
+                        <img src="assets/images/Channel Avatar.png" alt="Avatar do Canal" class="avatar">
                         <div class="channel-text">
                             <p class="page-title"><strong>DIO</strong></p>
                             <p class="subscribers">83,3 mil inscritos</p>
@@ -45,10 +45,10 @@
                     </div>
                     <div class="submenu-buttons">
                         <button class="subscribe-btn">INSCREVA-SE</button>
-                        <button><img src="/assets/images/thumbs-up.png" alt="Like"> 2 mil</button>
-                        <button><img src="/assets/images/thumbs-down.png" alt="Dislike"> Não gostei</button>
-                        <button><img src="/assets/images/share-2.png" alt="Compartilhar"> Compartilhar</button>
-                        <button><img src="/assets/images/download.png" alt="Download"> Download</button>
+                        <button><img src="assets/images/thumbs-up.png" alt="Like"> 2 mil</button>
+                        <button><img src="assets/images/thumbs-down.png" alt="Dislike"> Não gostei</button>
+                        <button><img src="assets/images/share-2.png" alt="Compartilhar"> Compartilhar</button>
+                        <button><img src="assets/images/download.png" alt="Download"> Download</button>
                     </div>
                 </div>
                 <p class="video-details">28.418 visualizações · Transmitido ao vivo em 16 dez. de 2024</p>
@@ -62,7 +62,7 @@
 
         <div class="sidebar">
             <div class="video-card">
-                <img src="/assets/images/Thumb.png" alt="Thumbnail 1">
+                <img src="assets/images/Thumb.png" alt="Thumbnail 1">
                 <div class="video-card-info">
                     <h6>Geração Tech Unimed - BH - Ciência de Dados</h6>
                     <p>DigitalInnovationOne</p>
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div class="video-card">
-                <img src="/assets/images/image 12.png" alt="Thumbnail 2">
+                <img src="assets/images/image 12.png" alt="Thumbnail 2">
                 <div class="video-card-info">
                     <h6>Scrum Talks</h6>
                     <p>DigitalInnovationOne</p>
@@ -78,7 +78,7 @@
                 </div>
             </div>
             <div class="video-card">
-                <img src="/assets/images/image 13.png" alt="Thumbnail 3">
+                <img src="assets/images/image 13.png" alt="Thumbnail 3">
                 <div class="video-card-info">
                     <h6>Machine Learning Avançado - Fast Track</h6>
                     <p>DigitalInnovationOne</p>
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="video-card">
-                <img src="/assets/images/Thumb.png" alt="Thumbnail 1">
+                <img src="assets/images/Thumb.png" alt="Thumbnail 1">
                 <div class="video-card-info">
                     <h6>Geração Tech Unimed - BH - Ciência de Dados</h6>
                     <p>DigitalInnovationOne</p>
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="video-card">
-                <img src="/assets/images/image 12.png" alt="Thumbnail 2">
+                <img src="assets/images/image 12.png" alt="Thumbnail 2">
                 <div class="video-card-info">
                     <h6>Scrum Talks</h6>
                     <p>DigitalInnovationOne</p>
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="video-card">
-                <img src="/assets/images/image 13.png" alt="Thumbnail 3">
+                <img src="assets/images/image 13.png" alt="Thumbnail 3">
                 <div class="video-card-info">
                     <h6>Machine Learning Avançado - Fast Track</h6>
                     <p>DigitalInnovationOne</p>
